# HyperData-Terminal

./: .env.example  .gitignore  CLAUDE.md  GROWTH.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_api.py  run_dashboard.py
.github/workflows/: ci.yml
config/: settings.py
src/: api_server.py  cli.py
src/dashboards/: boot.py  combined_dashboard.py  cvd_dashboard.py  hub_panels.py  liquidation_heatmap.py  liquidation_stream.py  liquidation_watch.py  market_overview.py  whale_tracker.py
src/data_layer/: address_store.py  alerts.py  deribit.py  funding_rates.py  hlp_tracker.py  hub.py  liquidation_feed.py  long_short_ratio.py  market_data.py  orderbook.py  orderflow_engine.py  persistence.py  position_scanner.py  smart_money.py  spot_prices.py
src/strategies/: __init__.py  base.py  llm_agent.py  paper_trader.py
src/strategies/examples/: __init__.py  cvd_momentum.py  funding_rate_arb.py  liquidation_cascade.py  whale_follow.py
src/utils/: helpers.py
tests/: conftest.py  test_deribit.py  test_funding_rates.py  test_liquidation_feed.py  test_long_short_ratio.py  test_market_data.py  test_orderbook.py  test_orderflow.py  test_position_scanner.py  test_spot_prices.py
