[project]
name = "hyperdata-terminal"
version = "1.0.0"
description = "Open-source crypto market data terminal with real-time dashboards and REST API"
requires-python = ">=3.12"

dependencies = [
    "aiohttp>=3.9.0,<4.0",
    "rich>=13.7.0,<14.0",
    "pyfiglet>=1.0.2,<2.0",
    "pandas>=2.2.0,<3.0",
    "numpy>=1.26.0,<3.0",
    "python-dotenv>=1.0.0,<2.0",
]

[project.scripts]
hyperdata = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*", "config*"]

[tool.setuptools.package-data]
"*" = ["*.json"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
